--- a/market-data.properties
+++ b/market-data.properties
@@ -3,5 +3,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace
 tblocks.yield.file.delimiter=;
-tblocks.yield.file.dateFormat=yyyy-MM-dd
+tblocks.yield.file.dateFormat=dd-MM-yyyy
 tblocks.yield.file.decimalSeparator=,
