--- a/forward-service.properties
+++ b/forward-service.properties
@@ -11,3 +11,4 @@ tblocks.report.nullValue=N/A
 tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.productId=277
 tblocks.parameter.proIdAll=279
+tblocks.system.dateFormat=yyyy-MM-dd
