--- a/print-service.properties
+++ b/print-service.properties
@@ -4,9 +4,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
 configuration.datasource.primary=tblocks-print-db
 configuration.datasource.secondary=tblocks-bpm-db
-tblocks.yield.file.dateFormat=dd-MM-yyyy
-tblocks.yield.file.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyy
-tblocks.yield.file.decimalSeparator=,
-tblocks.yield.file.thousandsSeparator=.
-tblocks.yield.file.idSpot=276
-tblocks.yield.file.idForward=277
+tblocks.document.dateFormat=dd-MM-yyyy
+tblocks.document.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyy
+tblocks.document.decimalSeparator=,
+tblocks.document.thousandsSeparator=.
+tblocks.parameter.idSpot=276
+tblocks.parameter.idForward=2777
