--- a/transfer-service.properties
+++ b/transfer-service.properties
@@ -4,7 +4,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
 configuration.datasource.primary=tblocks-transfer-db
 configuration.datasource.secondary=tblocks-bpm-db
-tblocks.yield.file.dateFormat=dd-MM-yyyy
-tblocks.yield.file.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyy
-tblocks.yield.file.decimalSeparator=,
-tblocks.yield.file.thousandsSeparator=.
+tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.report.dateFormat=dd-MM-yyyy
+tblocks.report.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyytrue
+tblocks.report.decimalSeparator=,
+tblocks.report.thousandsSeparator=.
