--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -6,8 +6,8 @@ spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
-#spring.datasource.url=${cloud.services.job-db.connection.jdbcurl}
-configuration.datasource.primary=job-db
+spring.datasource.url=${cloud.services.job-db.connection.jdbcurl}
+#configuration.datasource.primary=job-db
 endpoints.shutdown.enabled=true
 management.security.enabled=true
 management.security.roles=ADMIN
