--- a/forward-service.properties
+++ b/forward-service.properties
@@ -1,6 +1,6 @@
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
 configuration.datasource.primary=tblocks-forward-db
 configuration.datasource.secondary=tblocks-bpm-db
