--- a/spot-service.properties
+++ b/spot-service.properties
@@ -7,3 +7,4 @@ configuration.datasource.secondary=tblocks-bpm-db
 tblocks.yield.file.dateFormat=dd-MM-yyyy
 tblocks.yield.file.decimalSeparator=,
 tblocks.yield.file.thousandsSeparator=.
+tblocks.system.dateFormat=yyyy-MM-dd
