--- a/spot-service.properties
+++ b/spot-service.properties
@@ -8,3 +8,6 @@ tblocks.yield.file.dateFormat=dd-MM-yyyy
 tblocks.yield.file.decimalSeparator=,
 tblocks.yield.file.thousandsSeparator=.
 tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.report.dateFormat=dd-MM-yyyy
+tblocks.report.decimalSeparator=,
+tblocks.report.thousandsSeparator=.
