--- a/forward-service.properties
+++ b/forward-service.properties
@@ -12,3 +12,4 @@ tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.productId=277
 tblocks.parameter.proIdAll=279
 tblocks.system.dateFormat=yyyy-MM-dd
+logging.level.com.tblocks.forward.service=DEBUG
