--- a/auth-service.properties
+++ b/auth-service.properties
@@ -6,3 +6,7 @@ security.sessions=never
 server.context-path=/uaa
 configuration.datasource.primary=auth-db
 configuration.datasource.secondary=tblocks-bpm-db
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.scope=sso
+tblocks.oauth.timeout.seconds=1440000
