--- a/accounting-service.properties
+++ b/accounting-service.properties
@@ -3,3 +3,10 @@ logging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
+tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.report.dateFormat=dd-MM-yyyy
+tblocks.report.decimalSeparator=,
+tblocks.report.thousandsSeparator=.
+tblocks.report.nullValue=N/A
+tblocks.report.filterDefaulValue=Todos
+tblocks.parameter.proIdAll=279
