--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -10,3 +10,5 @@ endpoints.shutdown.enabled=true
 management.security.enabled=true
 management.security.roles=ADMIN
 spring.batch.job.enabled=false
+tblocks.jobs.eodDateRestriction=false
+tblocks.jobs.bodDateRestriction=false
