--- a/print-service.properties
+++ b/print-service.properties
@@ -10,3 +10,9 @@ tblocks.document.decimalSeparator=,
 tblocks.document.thousandsSeparator=.
 tblocks.parameter.idSpot=276
 tblocks.parameter.idForward=2777
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=super
+tblock.oauth.scope=sso
+tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
