--- a/print-service.properties
+++ b/print-service.properties
@@ -13,6 +13,6 @@ tblocks.parameter.idForward=2777
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=super
+tblock.oauth.password=Persu123@
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
