--- a/accounting-service.properties
+++ b/accounting-service.properties
@@ -2,7 +2,7 @@
 logging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
