--- a/forward-service.properties
+++ b/forward-service.properties
@@ -13,3 +13,9 @@ tblocks.parameter.productId=277
 tblocks.parameter.proIdAll=279
 tblocks.system.dateFormat=yyyy-MM-dd
 logging.level.com.tblocks.forward.service=DEBUG
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=super
+tblock.oauth.scope=sso
+tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
