--- a/forward-service.properties
+++ b/forward-service.properties
@@ -16,6 +16,6 @@ logging.level.com.tblocks.forward.service=DEBUG
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=super
+tblock.oauth.password=Persu123@
 tblock.oauth.scope=sso
 tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
