--- a/forward-service.properties
+++ b/forward-service.properties
@@ -12,6 +12,7 @@ tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.productId=277
 tblocks.parameter.proIdAll=279
 tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.jobs.rabbit.timeout=14400000
 logging.level.com.tblocks.forward.service=DEBUG
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
