--- a/accounting-service.properties
+++ b/accounting-service.properties
@@ -10,3 +10,4 @@ tblocks.report.thousandsSeparator=.
 tblocks.report.nullValue=N/A
 tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.proIdAll=279
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
