--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -12,3 +12,4 @@ management.security.roles=ADMIN
 spring.batch.job.enabled=false
 tblocks.jobs.eodDateRestriction=false
 tblocks.jobs.bodDateRestriction=false
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
