--- a/print-service.properties
+++ b/print-service.properties
@@ -16,3 +16,4 @@ tblock.oauth.username=super
 tblock.oauth.password=Persu123@
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
