--- a/spot-service.properties
+++ b/spot-service.properties
@@ -11,3 +11,4 @@ tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
