--- a/transfer-service.properties
+++ b/transfer-service.properties
@@ -9,3 +9,4 @@ tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyytrue
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
