--- a/spot-service.properties
+++ b/spot-service.properties
@@ -12,3 +12,4 @@ tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
 tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblocks.jobs.rabbit.timeout=14400000
