--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -13,3 +13,4 @@ spring.batch.job.enabled=false
 tblocks.jobs.eodDateRestriction=false
 tblocks.jobs.bodDateRestriction=false
 tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblocks.jobs.rabbit.timeout=14400000
