--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -12,5 +12,5 @@ management.security.roles=ADMIN
 spring.batch.job.enabled=false
 tblocks.jobs.eodDateRestriction=false
 tblocks.jobs.bodDateRestriction=false
-tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblock.oauth.token.signingKey=KK4hFtEUUQ7FNEBg
 tblocks.jobs.rabbit.timeout=14400000
