--- a/spot-service.properties
+++ b/spot-service.properties
@@ -11,5 +11,5 @@ tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
-tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblock.oauth.token.signingKey=KK4hFtEUUQ7FNEBg
 tblocks.jobs.rabbit.timeout=14400000
