--- a/market-data.properties
+++ b/market-data.properties
@@ -5,4 +5,4 @@ spring.jpa.properties.hibernate.type=trace
 tblocks.yield.file.delimiter=;
 tblocks.yield.file.dateFormat=dd-MM-yyyy
 tblocks.yield.file.decimalSeparator=,
-tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblock.oauth.token.signingKey=KK4hFtEUUQ7FNEBg
