--- a/static-data-service.properties
+++ b/static-data-service.properties
@@ -4,4 +4,4 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 tblocks.jobs.rabbit.timeout=14400000
-tblock.oauth.token.signingKey=KK4hFtEUUQ7FNEBg
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
