--- a/swap-service.properties
+++ b/swap-service.properties
@@ -1,1 +1,27 @@
-
+tlogging.level.com.netflix.hystrix.AbstractCommand= DEBUG
+hystrix.command.default.execution.isolation.strategy=SEMAPHORE
+spring.datasource.continue-on-error=true
+spring.jpa.hibernate.ddl-auto=update
+logging.level.root=INFO
+logging.level.com.tblocks.swap.service=INFO
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.type=trace
+tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.report.dateFormat=dd-MM-yyyy
+tblocks.report.decimalSeparator=,
+tblocks.report.thousandsSeparator=.
+tblocks.report.nullValue=N/A
+tblocks.report.filterDefaulValue=Todos
+tblocks.parameter.productId=278
+tblocks.parameter.proIdAll=279
+tblocks.jobs.rabbit.timeout=14400000
+endpoints.shutdown.enabled=true
+management.security.enabled=true
+management.security.roles=ADMIN
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=super
+tblock.oauth.scope=sso
+tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
+tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
