--- a/swap-service.properties
+++ b/swap-service.properties
@@ -24,4 +24,4 @@ tblock.oauth.username=super
 tblock.oauth.password=Persu123@
 tblock.oauth.scope=sso
 tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
-tblock.oauth.token.signingKey=Zu5JCQHEaG;KRb8=
+tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
