--- a/swap-service.properties
+++ b/swap-service.properties
@@ -6,6 +6,8 @@ logging.level.root=INFO
 logging.level.com.tblocks.swap.service=INFO
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
+configuration.datasource.primary=tblocks-forward-db
+configuration.datasource.secondary=tblocks-bpm-db
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
