--- a/swap-service.properties
+++ b/swap-service.properties
@@ -25,5 +25,5 @@ tblock.oauth.secret=secret
 tblock.oauth.username=super
 tblock.oauth.password=Persu123@
 tblock.oauth.scope=sso
-tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
+tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
