--- a/print-service.properties
+++ b/print-service.properties
@@ -13,7 +13,7 @@ tblocks.parameter.idForward=277
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=Persu123@
+tblock.oauth.password=Miami777*
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
