--- a/forward-service.properties
+++ b/forward-service.properties
@@ -17,7 +17,7 @@ logging.level.com.tblocks.forward.service=DEBUG
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=Persu123@
+tblock.oauth.password=Miami777*
 tblock.oauth.scope=sso
 tblock.oauth.url=http://10.254.1.244:9000/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
