--- a/swap-service.properties
+++ b/swap-service.properties
@@ -1,7 +1,7 @@
 tlogging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 logging.level.root=INFO
 logging.level.com.tblocks.swap.service=INFO
 spring.jpa.properties.hibernate.show_sql=false
