--- a/swap-service.properties
+++ b/swap-service.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.type=trace
 configuration.datasource.primary=tblocks-swap-db
 configuration.datasource.secondary=tblocks-bpm-db
 tblocks.system.dateFormat=yyyy-MM-dd
+tblocks.system.maxDecimal=7
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
