--- a/swap-service.properties
+++ b/swap-service.properties
@@ -24,7 +24,7 @@ management.security.roles=ADMIN
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=Persu123@
+tblock.oauth.password=Cuarenta321$*
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
