--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -2,6 +2,8 @@ zuul.sensitive-headers=Cookie,Set-Cookie,Authorization
 logging.level.com.netflix.hystrix.AbstractCommand=ERROR
 #hystrix.command.default.execution.isolation.strategy=THREAD
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds=1200000
+ribbon.ReadTimeout=1200000
+ribbon.ConnectTimeout=1200000
 endpoints.shutdown.enabled=true
 management.security.enabled=true
 management.security.roles=ADMIN
