--- a/accounting-service.properties
+++ b/accounting-service.properties
@@ -10,4 +10,5 @@ tblocks.report.thousandsSeparator=.
 tblocks.report.nullValue=N/A
 tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.proIdAll=279
+tblocks.parameter.prodSwapId=278
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
