--- a/load-bi.properties
+++ b/load-bi.properties
@@ -11,4 +11,10 @@ tblocks.report.nullValue=N/A
 tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.proIdAll=279
 tblocks.parameter.prodSwapId=278
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=Cuarenta321$*
+tblock.oauth.scope=sso
+tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
