--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -12,5 +12,11 @@ management.security.roles=ADMIN
 spring.batch.job.enabled=false
 tblocks.jobs.eodDateRestriction=false
 tblocks.jobs.bodDateRestriction=false
-tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
 tblocks.jobs.rabbit.timeout=14400000
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=Cuarenta321$*
+tblock.oauth.scope=sso
+tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
+tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
