--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -3,7 +3,7 @@ logging.level.com.tblocks.jobs=DEBUG
 hystrix.shareSecurityContext=true
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
 endpoints.shutdown.enabled=true
