--- a/jobs-service.properties
+++ b/jobs-service.properties
@@ -10,7 +10,7 @@ endpoints.shutdown.enabled=true
 management.security.enabled=true
 management.security.roles=ADMIN
 spring.batch.job.enabled=false
-tblocks.jobs.eodDateRestriction=true
+tblocks.jobs.eodDateRestriction=false
 tblocks.jobs.bodDateRestriction=false
 tblocks.jobs.rabbit.timeout=14400000
 tblock.oauth.client=html5
