--- a/auth-service.properties
+++ b/auth-service.properties
@@ -5,7 +5,7 @@ spring.jpa.properties.hibernate.type=trace
 security.sessions=never
 server.context-path=/uaa
 configuration.datasource.primary=auth-db
-configuration.datasource.secondary=tblocks-bpm-db
+configuration.datasource.secondary=bpm-db
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.scope=sso
