--- a/spot-service.properties
+++ b/spot-service.properties
@@ -2,8 +2,8 @@ spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
-configuration.datasource.primary=tblocks-spot-db
-configuration.datasource.secondary=tblocks-bpm-db
+configuration.datasource.primary=spot-db
+configuration.datasource.secondary=bpm-db
 tblocks.yield.file.dateFormat=dd-MM-yyyy
 tblocks.yield.file.decimalSeparator=,
 tblocks.yield.file.thousandsSeparator=.
