--- a/transfer-service.properties
+++ b/transfer-service.properties
@@ -1,9 +1,9 @@
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
-configuration.datasource.primary=tblocks-transfer-db
-configuration.datasource.secondary=tblocks-bpm-db
+configuration.datasource.primary=transfer-db
+configuration.datasource.secondary=bpm-db
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.longDateFormat=EEEEE dd 'de' MMMMM 'de' yyyytrue
