--- a/forward-service.properties
+++ b/forward-service.properties
@@ -1,9 +1,9 @@
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 #spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
-configuration.datasource.primary=tblocks-forward-db
-configuration.datasource.secondary=tblocks-bpm-db
+configuration.datasource.primary=forward-db
+configuration.datasource.secondary=bpm-db
 tblocks.report.dateFormat=dd-MM-yyyy
 tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
