--- a/swap-service.properties
+++ b/swap-service.properties
@@ -1,13 +1,13 @@
 tlogging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 logging.level.root=INFO
 logging.level.com.tblocks.swap.service=INFO
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
-configuration.datasource.primary=tblocks-swap-db
-configuration.datasource.secondary=tblocks-bpm-db
+configuration.datasource.primary=swap-db
+configuration.datasource.secondary=bpm-db
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.system.maxDecimal=7
 tblocks.report.dateFormat=dd-MM-yyyy
