--- a/web-service.properties
+++ b/web-service.properties
@@ -1,5 +1,5 @@
-com.tblocks.urlOauth=https://tblocks-oauth-server.cfapps.io/
-com.tblocks.urlEdge=https://edge-server.cfapps.io/
+com.tblocks.urlOauth=https://poc-oauth-server.cfapps.io/
+com.tblocks.urlEdge=https://poc-edge-server.cfapps.io/
 com.tblocks.grantType=password
 com.tblocks.scope=sso
 com.tblocks.clientSecret=secret
