--- a/forward-service.properties
+++ b/forward-service.properties
@@ -17,7 +17,7 @@ logging.level.com.tblocks.forward.service=DEBUG
 tblock.oauth.client=html5
 tblock.oauth.secret=secret
 tblock.oauth.username=super
-tblock.oauth.password=Cuarenta321$*
+tblock.oauth.password=Poc1234*
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
