--- a/forward-service.properties
+++ b/forward-service.properties
@@ -11,6 +11,8 @@ tblocks.report.nullValue=N/A
 tblocks.report.filterDefaulValue=Todos
 tblocks.parameter.productId=277
 tblocks.parameter.proIdAll=279
+tblocks.parameter.idYieldDiscount=2
+tblocks.parameter.idYieldForecast=3
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.jobs.rabbit.timeout=14400000
 logging.level.com.tblocks.forward.service=DEBUG
