--- a/swap-service.properties
+++ b/swap-service.properties
@@ -3,7 +3,7 @@ hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=none
 logging.level.root=INFO
-logging.level.com.tblocks.swap.service=INFO
+logging.level.com.tblocks.swap.service=DEBUG
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
 configuration.datasource.primary=tblocks-swap-db
