--- a/swap-service.properties
+++ b/swap-service.properties
@@ -2,7 +2,7 @@ tlogging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=none
-logging.level.root=INFO
+logging.level.root=DEBUG
 logging.level.com.tblocks.swap.service=DEBUG
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
