--- a/swap-service.properties
+++ b/swap-service.properties
@@ -2,8 +2,10 @@ tlogging.level.com.netflix.hystrix.AbstractCommand= DEBUG
 hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=none
-logging.level.root=DEBUG
-logging.level.com.tblocks.swap.service=DEBUG
+logging.level.root=NONE
+logging.level.com.tblocks.swap.service=NONE
+logging.level.com.tblocks.swap.model=DEBUG
+logging.level.com.tblocks.swap.controller=DEBUG
 spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.properties.hibernate.type=trace
 configuration.datasource.primary=tblocks-swap-db
