--- a/swap-service.properties
+++ b/swap-service.properties
@@ -3,7 +3,7 @@ hystrix.command.default.execution.isolation.strategy=SEMAPHORE
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=none
 logging.level.root=NONE
-logging.level.com.tblocks.swap.service=NONE
+logging.level.com.tblocks.swap.service=INFO
 logging.level.com.tblocks.swap.model=DEBUG
 logging.level.com.tblocks.swap.controller=DEBUG
 spring.jpa.properties.hibernate.show_sql=false
