--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -8,3 +8,4 @@ endpoints.shutdown.enabled=true
 management.security.enabled=true
 management.security.roles=ADMIN
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
+tblocks.system.dateFormat=yyyy-MM-dd
