--- a/static-data-service.properties
+++ b/static-data-service.properties
@@ -5,6 +5,6 @@ spring.jpa.properties.hibernate.type=trace
 spring.jpa.properties.hibernate.current_session_context_class=org.springframework.orm.hibernate4.SpringSessionContext
 tblocks.jobs.rabbit.timeout=14400000
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
-derivatik.kie-containers.url=http://142.93.88.230:8230/kie-drools-wb-7.14.0.Final-wildfly14/rest/controller/management/servers/derivatik-kie-server/containers 
+derivatik.kie-controller.url=http://142.93.88.230:8230/kie-drools-wb-7.14.0.Final-wildfly14/rest/controller/management/servers/derivatik-kie-server/containers 
 derivatik.kie-controller.login=kieserver
 derivatik.kie-controller.passwd=kieserver
