--- a/spot-service.properties
+++ b/spot-service.properties
@@ -16,4 +16,5 @@ tblocks.jobs.rabbit.timeout=14400000
 derivatik.kie-server.url=http://142.93.88.230:8230/kie-server-7.14.0.Final-ee7/services/rest/server/containers/instances/
 derivatik.kie-server.login=kieserver
 derivatik.kie-server.passwd=kieserver
+logging.level.com.tblocks.spot.service.SpotAttributionService= DEBUG
 
