--- a/spot-service.properties
+++ b/spot-service.properties
@@ -13,7 +13,7 @@ tblocks.report.decimalSeparator=,
 tblocks.report.thousandsSeparator=.
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
 tblocks.jobs.rabbit.timeout=14400000
-derivatik.kie-server.url=http://142.93.88.230:8230/kie-server-7.14.0.Final-ee7/services/rest/server/containers/instances/
+derivatik.kie-server.url=https://142.93.88.230:8593/kie-server-7.14.0.Final-ee7/services/rest/server/containers/instances/
 derivatik.kie-server.login=kieserver
 derivatik.kie-server.passwd=kieserver
 logging.level.com.tblocks.spot.service.SpotAttributionService= DEBUG
