--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -11,7 +11,7 @@ tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
 tblocks.system.dateFormat=yyyy-MM-dd
 tblocks.system.http.log.enabled=true
 spring.datasource.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
 configuration.datasource.primary=tblocks-edge-db
