--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -9,7 +9,7 @@ management.security.enabled=true
 management.security.roles=ADMIN
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
 tblocks.system.dateFormat=yyyy-MM-dd
-tblocks.system.http.log.enabled=true
+tblocks.system.http.log.enabled=false
 spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
