--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -14,9 +14,9 @@ spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
-configuration.datasource.primary=tblocks-edge-db
 spring.datasource.tomcat.initial-size=50
-#spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.max-wait=20000
 spring.datasource.tomcat.max-active=300
-#spring.datasource.tomcat.max-idle=150
-#spring.datasource.tomcat.min-idle=8
+spring.datasource.tomcat.max-idle=150
+spring.datasource.tomcat.min-idle=8
+spring.datasource.tomcat.default-auto-commit=true
