--- a/com-tblocks-edge-service.properties
+++ b/com-tblocks-edge-service.properties
@@ -14,9 +14,9 @@ spring.datasource.continue-on-error=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.type=trace 
-spring.datasource.initial-size=50
-spring.datasource.max-wait=20000
-spring.datasource.max-active=300
-spring.datasource.max-idle=150
-spring.datasource.min-idle=8
-spring.datasource.default-auto-commit=true
+spring.datasource.hikari.initial-size=50
+spring.datasource.hikari.max-wait=20000
+spring.datasource.hikari.max-active=300
+spring.datasource.hikari.max-idle=150
+spring.datasource.hikari.min-idle=8
+spring.datasource.hikari.default-auto-commit=true
