--- a/spot-service.properties
+++ b/spot-service.properties
@@ -17,4 +17,10 @@ derivatik.kie-server.url=http://142.93.88.230:8230/kie-server-7.14.0.Final-ee7/s
 derivatik.kie-server.login=kieserver
 derivatik.kie-server.passwd=kieserver
 logging.level.com.tblocks.spot.service.SpotAttributionService= DEBUG
-
+tblock.oauth.client=html5
+tblock.oauth.secret=secret
+tblock.oauth.username=super
+tblock.oauth.password=Cuarenta321$*
+tblock.oauth.scope=sso
+tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
+tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
