--- a/forward-service.properties
+++ b/forward-service.properties
@@ -23,6 +23,6 @@ tblock.oauth.password=Cuarenta321$*
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
-derivatik.kie-server.url=http://157.230.74.111:8230/kie-server-7.14.0.Final-ee7/services/rest/server/containers/instances/
+derivatik.kie-server.url=https://desa.brm.derivatik.com/kie-server-7.14.0.Final-ee7/services/rest/server/containers/instances/
 derivatik.kie-server.login=kieserver
 derivatik.kie-server.passwd=kieserver
