--- a/spot-service.properties
+++ b/spot-service.properties
@@ -24,3 +24,5 @@ tblock.oauth.password=Cuarenta321$*
 tblock.oauth.scope=sso
 tblock.oauth.url=https://tblocks-oauth-server.cfapps.io/uaa/oauth/token
 tblock.oauth.token.signingKey=b8HCK8F2dpYr9ReD
+tblocks.parameter.productId=276
+tblocks.parameter.proIdAll=279
